Fixed facilities margins on tablet view

--- a/src/app/modules/core/advertisement/components/card/card-top/card-main-container/card-main-container.component.scss
+++ b/src/app/modules/core/advertisement/components/card/card-top/card-main-container/card-main-container.component.scss
@@ -1,7 +1,3 @@
 #card {
   margin-bottom: 20px;
 }
-
-.mobile-spacing {
-  margin-top: 15px;
-}
